# cf-template

./: .gitignore  Cargo.toml  README.md  comp.sh  init.sh  solution.rs  update_readme.sh
.github/workflows/: update_readme.yml
1000s/: 118a.rs  122a.rs  131a.rs  1a.rs  230a.rs  339b.rs  479a.rs  579a.rs  58a.rs  69a  69a.rs
1100s/: 1327a  1327a.rs  158b  158b.rs  270a  270a.rs  313b  313b.rs  363b  363b.rs  368b  368b.rs  456a  456a.rs  467b  467b.rs  519b  519b.rs  706b  706b.rs
800s/: 231a.rs  282a.rs  339a.rs  96a.rs
900s/: 133a.rs  1475a.rs  160a.rs  208a.rs  318a.rs  337a  337a.rs  405a  405a.rs  451a.rs  580a.rs
