[package]
name = "codeforces"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"

[[bin]]
name = "112a"
path = "800s/112a.rs"

[[bin]]
name = "158a"
path = "800s/158a.rs"

[[bin]]
name = "231a"
path = "800s/231a.rs"

[[bin]]
name = "236a"
path = "800s/236a.rs"

[[bin]]
name = "263a"
path = "800s/263a.rs"

[[bin]]
name = "282a"
path = "800s/282a.rs"

[[bin]]
name = "4a"
path = "800s/4a.rs"

[[bin]]
name = "50a"
path = "800s/50a.rs"

[[bin]]
name = "71a"
path = "800s/71a.rs"

[[bin]]
name = "96a"
path = "800s/96a.rs"

[[bin]]
name = "339a"
path = "800s/339a.rs"

[[bin]]
name = "160a"
path = "900s/160a.rs"

[[bin]]
name = "318a"
path = "900s/318a.rs"

[[bin]]
name = "133a"
path = "900s/133a.rs"

[[bin]]
name = "405a"
path = "900s/405a.rs"

[[bin]]
name = "208a"
path = "900s/208a.rs"

[[bin]]
name = "580a"
path = "900s/580a.rs"

[[bin]]
name = "337a"
path = "900s/337a.rs"

[[bin]]
name = "1475a"
path = "900s/1475a.rs"

[[bin]]
name = "451a"
path = "900s/451a.rs"

[[bin]]
name = "1a"
path = "1000s/1a.rs"

[[bin]]
name = "118a"
path = "1000s/118a.rs"

[[bin]]
name = "69a"
path = "1000s/69a.rs"

[[bin]]
name = "58a"
path = "1000s/58a.rs"

[[bin]]
name = "122a"
path = "1000s/122a.rs"

[[bin]]
name = "479a"
path = "1000s/479a.rs"

[[bin]]
name = "131a"
path = "1000s/131a.rs"

[[bin]]
name = "230a"
path = "1000s/230a.rs"

[[bin]]
name = "339b"
path = "1000s/339b.rs"

[[bin]]
name = "579a"
path = "1000s/579a.rs"

[[bin]]
name = "158b"
path = "1100s/158b.rs"

[[bin]]
name = "706b"
path = "1100s/706b.rs"

[[bin]]
name = "363b"
path = "1100s/363b.rs"

[[bin]]
name = "456a"
path = "1100s/456a.rs"

[[bin]]
name = "313b"
path = "1100s/313b.rs"

[[bin]]
name = "270a"
path = "1100s/270a.rs"

[[bin]]
name = "368b"
path = "1100s/368b.rs"

[[bin]]
name = "1327a"
path = "1100s/1327a.rs"

[[bin]]
name = "519b"
path = "1100s/519b.rs"

[[bin]]
name = "467b"
path = "1100s/467b.rs"
